--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "uglify-js": "~2.4.8",
     "metrics": "~0.1.6",
     "pg": "~2.10.0",
-    "lb_pool": "git@github.com:Voxer/lb_pool.git"
+    "lb_pool": "~1.0.0"
   },
   "devDependencies": {
     "tap": "~0.4.4"
