extract open-new-tab and browser-keymap

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "d3": "~3.3.6",
     "routes": "~0.2.0",
     "uglify-js": "~2.4.8",
+    "open-new-tab": "~0.0.1",
+    "browser-keymap": "~0.0.1",
     "metrics": "~0.1.6",
     "pg": "~2.10.0",
     "lb_pool": "~1.0.0"
