--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,9 @@
     "lodash": "~2.1.0",
     "d3": "~3.3.6",
     "routes": "~0.2.0",
-    "uglify-js": "~2.4.8"
+    "uglify-js": "~2.4.8",
+    "open-new-tab": "~0.0.1",
+    "browser-keymap": "~0.0.1"
   },
   "devDependencies": {
     "tap": "~0.4.4"
