extract event-source-emitter

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "open-new-tab": "~0.0.1",
     "browser-keymap": "~0.0.1",
     "skyview": "~0.0.0",
+    "event-source-emitter": "~0.0.2",
     "metrics": "~0.1.6",
     "pg": "~2.10.0",
     "lb_pool": "~1.0.0"
