--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "uglify-js": "~2.4.8",
     "open-new-tab": "~0.0.1",
     "browser-keymap": "~0.0.1",
-    "skyview": "~0.0.0"
+    "skyview": "~0.0.0",
+    "event-source-emitter": "~0.0.2"
   },
   "devDependencies": {
     "tap": "~0.4.4"
