--- a/agent/package.json
+++ b/agent/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "metrics-agent",
+  "name": "zag-agent",
   "version": "0.0.0",
   "author": "sentientwaffle",
-  "description": "send metrics to metrics-daemon",
+  "description": "send metrics to zag-daemon",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -10,11 +10,15 @@
   "scripts": {
     "test": "tap $(find test -name '*.test.js' | sort)"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/voxer/zag.git"
+  },
+  "homepage": "https://github.com/voxer/zag",
   "keywords": [
+    "zag",
     "metrics"
   ],
-  "private": true,
   "dependencies": {
     "lb_pool": "~1.0.0"
   },
