--- a/daemon/package.json
+++ b/daemon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metrics-daemon",
+  "name": "zag-daemon",
   "version": "0.0.0",
   "author": "sentientwaffle",
   "description": "aggregate metrics data",
@@ -10,15 +10,20 @@
   "scripts": {
     "test": "tap $(find test -name '*.test.js' | sort)"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/voxer/zag.git"
+  },
+  "homepage": "https://github.com/voxer/zag",
   "keywords": [
+    "zag",
     "metrics"
   ],
-  "private": true,
   "dependencies": {
     "metrics": "~0.1.6",
     "llquantize": "0.0.6",
-    "routes": "~0.2.0"
+    "routes": "~0.2.0",
+    "zag-agent": "~0.0.0"
   },
   "devDependencies": {
     "tap": "~0.4.6"
