--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "lodash": "~2.1.0",
     "d3": "~3.5.11",
     "routes": "~0.2.0",
-    "uglify-js": "~2.4.8",
+    "uglify-js": "3.3.18",
     "open-new-tab": "~0.0.1",
     "browser-keymap": "~0.0.1",
     "skyview": "~0.0.0",
